syntax ="proto3";
package CoolCar;

// 生成包的路径,.代表当前目录，trippb是包名称
option go_package = "./gen/go;trippb";

message Location {
    double latitude = 1;
    double longitude = 2;
}
enum TripStatus {
    TS_NOT_SPECIFIED =0;
    NOT_STATED = 1;
    IN_PROCESS =2;
    FINISHED = 3;
    PAID = 4;
}
message Trip{
    string start = 1;
    string end =2;
    int32 duration_sec=3;
    int32 fee_cent=4; 
    Location start_pos= 5;
    Location end_pos= 6;
    repeated Location path_locations = 7;
    TripStatus status =8;
}
message GetTripRequest {
    string id=1;
}
message GetTripResponse {
    string id = 1;
    Trip trip =2;
}
// 定义服务
service TripService {
    rpc GetTrip(GetTripRequest) returns (GetTripResponse);
}